# ComRedClient

./: .gitignore  CMakeLists.txt  README.md
Application/: CMakeLists.txt  app.cpp  main.cpp
Application/include/: application.h  document.h  header.h
Application/src/: application.cpp  document.cpp
HTTPClient/: CMakeLists.txt
HTTPClient/include/: client.h  httpClient.h
HTTPClient/src/: client.cpp  httpClient.cpp  main.cpp
Interface/: Interface.pro  documentform.cpp  documentform.h  documentform.ui  form.cpp  form.h  form.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_documentform.h  ui_form.h  ui_mainwindow.h
